<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hackathon.healthy.Father_Fragment"
    android:background="@drawable/shapebackground"
    android:orientation="vertical">

    <TextView

        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/facaoseu"
        android:ems="10"
        android:textColor="#FFF"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:ems="13"
        android:text="@string/pai"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginStart="25dp"
        android:fontFamily="sans-serif"

        />
    <EditText
        android:textSize="30sp"
        android:background="@android:color/white"
        android:id="@+id/fathername"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="40dp"
        android:inputType="text"
        android:hint="@string/FatherName" />

        <EditText
            android:textSize="30sp"
            android:background="@android:color/white"
            android:id="@+id/fatheremail"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/FatherEmail"
            android:inputType="text"
            />

        <EditText
            android:textSize="30dp"

            android:background="@android:color/white"
            android:id="@+id/password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/PW"/>
        <EditText
            android:textSize="30dp"
            android:background="@color/greyW"
            android:id="@+id/confirrmarpassoword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/CPW"
           />

    <Button
        android:ems="70"
        android:id="@+id/salvar"
        android:layout_width="89dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/bentrar"
        android:fontFamily="sans-serif"
        android:text="@string/salvar"
        android:textColor="#FFF"
       />



</LinearLayout>
