<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hackathon.healthy.SonFragment"
    android:background="@color/babckgray"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFF"
            android:orientation="vertical">

            <TextView
                android:layout_gravity="center_horizontal"
                android:id="@+id/textView"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="8dp"
                android:ems="13"
                android:text="@string/bebe"
                android:textColor="#000"
                android:textSize="19sp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.SearchResult.Subtitle"
                 />

            <EditText
                android:textSize="16sp"
                android:background="@drawable/edittext"
                android:id="@+id/babyname"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:ems="10"

                android:hint="@string/nome"
                />

            <EditText
                android:textSize="16sp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/edittext"
                android:id="@+id/babyidade"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/idade"
                android:inputType="number"
                />
            <EditText
                android:background="@drawable/edittext"
                android:id="@+id/babysexo"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:textSize="16sp"
                android:ems="10"
                android:hint="@string/sexo"
                />

            <EditText
                android:background="@drawable/edittext"
                android:id="@+id/data_nascimento"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:textSize="16sp"
                android:ems="10"
                android:hint="@string/data"
                android:inputType="date"
                />

            <Button
                android:textSize="16sp"
                android:id="@+id/registrar"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:background="@drawable/bentrar"
                android:ems="70"
                android:fontFamily="sans-serif"
                android:text="@string/concluindo"
                android:textColor="#FFF"

                />

        </LinearLayout>


    </android.support.v7.widget.CardView>






</LinearLayout>
