<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.hackathon.healthy.LoginFragment"
    android:orientation="vertical"
    android:background="@drawable/shapebackground">
   <android.support.v7.widget.CardView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:cardCornerRadius="4dp"
       android:layout_margin="20dp"
       android:layout_gravity="center_horizontal">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical">
           <TextView
               android:paddingTop="16dp"
               android:layout_marginTop="10dp"
               android:layout_marginBottom="16dp"
               android:layout_width="300dp"
               android:layout_height="wrap_content"
               android:textAlignment="center"
               android:text="@string/textLogin"
               android:ems="10"
               android:textColor="#000"
               android:textSize="22sp"
               android:fontFamily="sans-serif-condensed"
             />
           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@drawable/edittext"
               android:textSize="16sp"
               android:fontFamily="sans-serif-condensed"
               android:id="@+id/email"
               android:layout_gravity="center_horizontal"
               android:layout_marginBottom="2dp"
               android:paddingBottom="16dp"
               android:ems="10"
               android:hint="@string/email"
               android:inputType="textEmailAddress"
               android:labelFor="@id/email"/>
           <EditText
               android:layout_height="wrap_content"
               android:layout_width="match_parent"
               android:background="@drawable/edittext"
               android:textSize="16sp"
               android:id="@+id/password"
               android:layout_gravity="center_horizontal"
               android:ems="10"
               android:inputType="textPassword"
               android:layout_marginTop="16dp"
               android:layout_marginBottom="8dp"
               android:labelFor="@id/password"
               android:hint="@string/PW"
               />
           <Button
               android:id="@+id/login"
               android:layout_width="250dp"
               android:layout_height="wrap_content"
               android:layout_marginBottom="36dp"
               android:layout_marginEnd="8dp"
               android:background="@drawable/bentrar"
               android:ems="70"
               android:layout_gravity="center_horizontal"
               android:fontFamily="sans-serif"
               android:text="@string/signIn"
               android:textSize="14sp"
               android:textColor="#FFF"
               />
       </LinearLayout>
   </android.support.v7.widget.CardView>







</LinearLayout>
