<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hackathon.healthy.HomeFragment"
    android:background="@drawable/happy"
    android:orientation="vertical"
    >
    <!-- TODO: Update blank fragment layout -->

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/babckgray"
        >
        <LinearLayout
            android:background="@color/babckgray"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            >
            <TextView
                android:textColor="#0b0b0b"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/CartaodeSaude"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif-condensed"
                android:textSize="28dp"/>

            <Button
                android:id="@+id/ButtonLogin"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/bentrar"
                android:text="@string/login"
                android:textColor="#FFF"
                />


            <Button
                android:id="@+id/ButtonRegistrar"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bentrar"
                android:gravity="center"
                android:text="@string/registrar"
                android:textAlignment="center"
                android:textColor="#FFF" />
        </LinearLayout>


    </android.support.v7.widget.CardView>



</LinearLayout>
