<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context="com.hackathon.healthy.Dashboard" android:orientation="horizontal">

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
       >

       <TextView

           android:paddingTop="16dp"
           android:layout_marginTop="40dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/mydash"
           android:textSize="22sp"
           android:textColor="#000"
           android:textStyle="bold"
           android:paddingBottom="16dp"
           android:layout_marginStart="80dp"
           />
       <View
           android:layout_marginStart="80dp"
           android:layout_width="250dp"
           android:layout_height="2dp"
           android:background="@color/red"
           android:paddingBottom="16dp"
           android:layout_marginBottom="30dp"/>

       <android.support.constraint.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_marginStart="16dp"
           android:orientation="horizontal">

           <ImageButton
               android:id="@+id/imageButton"
               android:layout_width="101dp"
               android:layout_height="100dp"
               android:layout_marginBottom="8dp"
               android:layout_marginEnd="16dp"
               android:layout_marginStart="16dp"
               android:layout_marginTop="16dp"
               android:background="@drawable/calendar"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintHorizontal_bias="0.831"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintVertical_bias="0.025"
               android:contentDescription="@string/calendar"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="17dp"
               android:layout_marginBottom="8dp"
               android:layout_marginStart="8dp"
               android:text="@string/alerta"
               android:textColor="#000"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintHorizontal_bias="0.296"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintVertical_bias="0.361" />

           <ImageButton
               android:layout_width="101dp"
               android:layout_height="100dp"
               android:layout_marginBottom="8dp"
               android:layout_marginEnd="8dp"
               android:layout_marginStart="16dp"
               android:layout_marginTop="16dp"
               android:background="@drawable/alerta"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintHorizontal_bias="0.219"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintVertical_bias="0.025"
               android:contentDescription="@string/alerta" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="18dp"
               android:layout_marginBottom="8dp"
               android:layout_marginStart="8dp"
               android:text="@string/calendar"
               android:textColor="#000"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintHorizontal_bias="0.764"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintVertical_bias="0.372" />

       </android.support.constraint.ConstraintLayout>

    </LinearLayout>
    <android.support.design.widget.NavigationView
        app:headerLayout="@layout/header_nav"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:menu="@menu/nav_menu"
        android:layout_gravity="start"
        >

    </android.support.design.widget.NavigationView>

    </android.support.v4.widget.DrawerLayout>

